--- a/OsnovnaSkola/OsnovnaSkolaUI/Views/AddUcionicaWindow.xaml
+++ b/OsnovnaSkola/OsnovnaSkolaUI/Views/AddUcionicaWindow.xaml
@@ -5,8 +5,41 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OsnovnaSkolaUI.Views"
         mc:Ignorable="d"
-        Title="AddUcionicaWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="Nova učionica" Height="505" Width="490" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+
+    <Window.Resources>
+        <Style x:Key="FocusTextBox" TargetType="Grid">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding ElementName=textBoxIme, Path=IsVisible}" Value="True">
+                    <Setter Property="FocusManager.FocusedElement" Value="{Binding ElementName=textBoxPrezime}"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
+
+    <Grid x:Name="UcionicaGrid" Background="Black" Margin="0,0,0,-1" Style="{StaticResource FocusTextBox}">
+        <Label Content="Nova učionica" HorizontalContentAlignment="Center" Height="66" Margin="21,10,23,0" VerticalAlignment="Top"  FontSize="26" FontFamily="Segoe UI" Foreground="#FFFBFB9F"/>
+
+        <Label Content="Naziv učionice:" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="34" Margin="113,93,0,0" VerticalAlignment="Top" Width="244" FontFamily="Segoe UI" Foreground="#FFFBFB9F" FontSize="20" />
+        <TextBox x:Name="NazivBox" HorizontalAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Text="{Binding NovaUcionica.naziv, UpdateSourceTrigger=PropertyChanged}"  FontFamily="Khmer UI" FontSize="20" TextWrapping="Wrap" Width="244" Margin="113,137,0,0" Background="#FF2E2E2E" BorderBrush="#FF282829" Foreground="#FFFBFB9F" Height="39" VerticalAlignment="Top">
+            <TextBox.InputBindings>
+                <KeyBinding Command="{Binding AddUcionicaCommand}" Key="Enter"/>
+            </TextBox.InputBindings>
+        </TextBox>
+        <Label Content="{Binding NazivError, UpdateSourceTrigger=PropertyChanged}" Name="imeError" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="34" Margin="21,176,0,0" VerticalAlignment="Top" Width="440" FontFamily="Segoe UI" Foreground="red" FontSize="16" />
+
+
+        <Label Content="Smešta učenika:" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="38" Margin="113,218,0,0" VerticalAlignment="Top" Width="244" FontFamily="Segoe UI" Foreground="#FFFBFB9F" FontSize="20" />
+        <TextBox x:Name="BroUcenikaBox" Text="{Binding NovaUcionica.broj_ucenika}" HorizontalAlignment="Left" Background="#FF2E2E2E" BorderThickness="1" BorderBrush="#FF282829" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Height="34" Width="243" Foreground="#FFFBFB9F" Margin="114,261,0,169">
+            <TextBox.InputBindings>
+                <KeyBinding Command="{Binding AddUcionicaCommand}" Key="Enter"/>
+            </TextBox.InputBindings>
+        </TextBox>
+
+
+        <Label Content="{Binding BrojError, UpdateSourceTrigger=PropertyChanged}" Name="prezimeError" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="34" Margin="21,323,0,0" VerticalAlignment="Top" Width="440" FontFamily="Segoe UI" Foreground="red" FontSize="16" />
+
+        <Button  Content="{Binding ButtonContent}" IsDefault="True" Command="{Binding AddUcionicaCommand}" HorizontalAlignment="Left"  FontSize="24" VerticalAlignment="Top" Width="130" Margin="168,382,0,0" Height="48" RenderTransformOrigin="0.769,0.381"  FontFamily="Segoe UI" Background="Transparent" BorderBrush="White" Foreground="#FFFBFB9F" FontWeight="Bold"/>
+
     </Grid>
 </Window>
