--- a/OsnovnaSkola/OsnovnaSkolaUI/MainWindow.xaml
+++ b/OsnovnaSkola/OsnovnaSkolaUI/MainWindow.xaml
@@ -80,6 +80,61 @@
                 </DataGrid>
             </TabItem>
 
+            <!--Ucionice-->
+            <TabItem Header="Ucionice"  Visibility="{Binding AuthorizeAdmin}">
+                <DataGrid  Visibility="{Binding AuthorizeAdmin}" ItemsSource="{Binding Ucionice, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" SelectedItem="{Binding SelectedUcionica}" ColumnWidth="*" AutoGenerateColumns="False" IsReadOnly="True">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Id" TextBlock.TextAlignment="Center" Binding="{Binding Id_ucionice}" IsReadOnly="True">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="TextWrapping" Value="Wrap" />
+                                    <Setter Property="HorizontalAlignment" Value="Center" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+
+                        <DataGridTextColumn Header="Naziv" TextBlock.TextAlignment="Center" Binding="{Binding naziv}" IsReadOnly="True">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="TextWrapping" Value="Wrap" />
+                                    <Setter Property="HorizontalAlignment" Value="Center" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+
+
+                        <DataGridTextColumn Header="Broj ucenika" TextBlock.TextAlignment="Center" Binding="{Binding broj_ucenika}" IsReadOnly="True">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="TextWrapping" Value="Wrap" />
+                                    <Setter Property="HorizontalAlignment" Value="Center" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+
+                        <!--<DataGridTemplateColumn Header="Dodaj razrednog">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Button Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}, Path=DataContext.AddRazrednogCommand}" CommandParameter="{Binding}">Razredni</Button>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+
+                        <DataGridTemplateColumn Header="Dodaj nastavnika/učitelja">
+                            <DataGridTemplateColumn.CellTemplate >
+                                <DataTemplate >
+                                    <Button  Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}, Path=DataContext.AddNastavnikCommand}" CommandParameter="{Binding}">Nastavnik/učitelj</Button>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>-->
+
+                    </DataGrid.Columns>
+                </DataGrid>
+            </TabItem>
+            
             <!--Ucenici-->
             <TabItem Header="Ucenici" Visibility="{Binding AuthorizeAdmin}">
                 <DataGrid Visibility="{Binding AuthorizeAdmin}" ItemsSource="{Binding Ucenici, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" SelectedItem="{Binding SelectedUcenik}" ColumnWidth="*" AutoGenerateColumns="False" IsReadOnly="True">
@@ -561,8 +616,8 @@
                     </DataGrid.Columns>
                 </DataGrid>
             </TabItem>
-
-
+            
+            
 
 
         </TabControl>
@@ -577,8 +632,8 @@
         <Button Content="IzmeniOdeljenje" Command="{Binding ChangeOdeljenjeCommand}" Visibility="{Binding AuthorizeAdmin}" Background="Transparent"  FontFamily="Segoe UI" Foreground="#FFFBFB9F" BorderBrush="white" Width="167" FontSize="22" Margin="231,414,0,0" HorizontalAlignment="Left" Height="44" VerticalAlignment="Top" RenderTransformOrigin="0.47,5.777" />
         <Button Content="ObrisiOdeljenje" Command="{Binding DeleteOdeljenjeCommand}" Visibility="{Binding AuthorizeAdmin}" Background="Transparent"  FontFamily="Segoe UI" Foreground="#FFFBFB9F" BorderBrush="white" Width="162" FontSize="22" Margin="150,463,0,0" HorizontalAlignment="Left" Height="44" VerticalAlignment="Top" RenderTransformOrigin="0.47,5.777" />
         <Button Content="NoviPredmet" Command="{Binding AddPredmetCommand}" Visibility="{Binding AuthorizeAdmin}" Background="Transparent"  FontFamily="Segoe UI" Foreground="#FFFBFB9F" BorderBrush="white" Width="162" FontSize="22" Margin="69,507,0,0" HorizontalAlignment="Left" Height="44" VerticalAlignment="Top" RenderTransformOrigin="0.47,5.777" />
-        <Button Content="ObrisiPredmet" Command="{Binding DeletePredmetCommand}" Visibility="{Binding AuthorizeAdmin}" Background="Transparent"  FontFamily="Segoe UI" Foreground="#FFFBFB9F" BorderBrush="white" Width="162" FontSize="22" Margin="231,507,0,0" HorizontalAlignment="Left" Height="44" VerticalAlignment="Top" RenderTransformOrigin="0.47,5.777" />
-        <Button Content="IzmeniPredmet" Command="{Binding ChangePredmetCommand}" Visibility="{Binding AuthorizeAdmin}" Background="Transparent"  FontFamily="Segoe UI" Foreground="#FFFBFB9F" BorderBrush="white" Width="162" FontSize="22" Margin="150,551,0,0" HorizontalAlignment="Left" Height="44" VerticalAlignment="Top" RenderTransformOrigin="0.47,5.777" />
+        <Button Content="ObrisiPredmet" Command="{Binding DeletePredmetCommand}" Visibility="{Binding AuthorizeAdmin}" Background="Transparent"  FontFamily="Segoe UI" Foreground="#FFFBFB9F" BorderBrush="white" Width="162" FontSize="22" Margin="150,551,0,0" HorizontalAlignment="Left" Height="44" VerticalAlignment="Top" RenderTransformOrigin="0.47,5.777" />
+        <Button Content="IzmeniPredmet" Command="{Binding ChangePredmetCommand}" Visibility="{Binding AuthorizeAdmin}" Background="Transparent"  FontFamily="Segoe UI" Foreground="#FFFBFB9F" BorderBrush="white" Width="162" FontSize="22" Margin="231,507,0,0" HorizontalAlignment="Left" Height="44" VerticalAlignment="Top" RenderTransformOrigin="0.47,5.777" />
 
 
         <Button Content="DodajPredavanje" HorizontalAlignment="Left" Command="{Binding CreatePredavanjeCommand}" Visibility="{Binding IsAdmin}" Height="44" Margin="472,160,0,0" VerticalAlignment="Top" Width="206" Foreground="#FFFBFB9F" Background="Transparent"  FontFamily="Segoe UI" BorderBrush="White" FontSize="22" />
@@ -590,6 +645,8 @@
         <Button Content="DodajDomaci" HorizontalAlignment="Left" Command="{Binding CreateDomaciCommand}" Visibility="{Binding IsAdmin}" Height="44" Margin="613,76,0,0" VerticalAlignment="Top" Width="169" Foreground="#FFFBFB9F" Background="Transparent"  FontFamily="Segoe UI" BorderBrush="White" FontSize="22" />
         <Button Content="DodajKontrolni" HorizontalAlignment="Left" Command="{Binding CreateKontrolniCommand}" Visibility="{Binding IsAdmin}" Height="44" Margin="800,76,0,0" VerticalAlignment="Top" Width="170" Foreground="#FFFBFB9F" Background="Transparent"  FontFamily="Segoe UI" BorderBrush="White" FontSize="22" />
         <Button Content="NovaUcionica" Command="{Binding AddUcionicaCommand}" Visibility="{Binding AuthorizeAdmin}" Background="Transparent"  FontFamily="Segoe UI" Foreground="#FFFBFB9F" BorderBrush="white" Width="162" FontSize="22" Margin="69,595,0,0" HorizontalAlignment="Left" Height="44" VerticalAlignment="Top" RenderTransformOrigin="0.47,5.777" />
+        <Button Content="IzmeniUcionicu" Command="{Binding ChangeUcionicaCommand}" Visibility="{Binding AuthorizeAdmin}" Background="Transparent"  FontFamily="Segoe UI" Foreground="#FFFBFB9F" BorderBrush="white" Width="162" FontSize="22" Margin="231,595,0,0" HorizontalAlignment="Left" Height="44" VerticalAlignment="Top" RenderTransformOrigin="0.47,5.777" />
+        <Button Content="ObrisiUcionicu" Command="{Binding DeleteUcionicaCommand}" Visibility="{Binding AuthorizeAdmin}" Background="Transparent"  FontFamily="Segoe UI" Foreground="#FFFBFB9F" BorderBrush="white" Width="162" FontSize="22" Margin="150,639,0,0" HorizontalAlignment="Left" Height="44" VerticalAlignment="Top" RenderTransformOrigin="0.47,5.777" />
 
     </Grid>
 </Window>
