--- a/OsnovnaSkola/OsnovnaSkolaUI/Views/AddDomaciWindow.xaml
+++ b/OsnovnaSkola/OsnovnaSkolaUI/Views/AddDomaciWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OsnovnaSkolaUI.Views"
         mc:Ignorable="d"
-        Title="AddDomaciWindow" Height="717" Width="566" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="AddDomaciWindow" Height="683.461" Width="566" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <ControlTemplate x:Key="TextBoxBaseControlTemplate" TargetType="{x:Type TextBoxBase}">
             <Border Background="{TemplateBinding Background}" 
@@ -27,21 +27,76 @@
             </ControlTemplate.Triggers>
         </ControlTemplate>
     </Window.Resources>
-    <Grid Background="Black">
+    <Grid Background="Black" >
         <Label Content="{Binding Naslov}" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="66" Margin="137,18,0,0" VerticalAlignment="Top" Width="299"  FontSize="28" FontFamily="Segoe UI" Foreground="#FFFBFB9F"/>
 
-        <TextBox Template="{StaticResource TextBoxBaseControlTemplate}" HorizontalAlignment="Left" Height="39" TextWrapping="Wrap" Text="{Binding NoviDomaci.zadatak, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="464" Margin="55,163,0,0" Background="#FF2E2E2E" Foreground="#FFA7A9A8" FontSize="22"/>
-        <DatePicker SelectedDate="{Binding NoviDomaci.dan_zadavanja}" Margin="55,255,41,402"></DatePicker>
-        <DatePicker SelectedDate="{Binding NoviDomaci.dan_predaje}" Margin="55,356,41,289"></DatePicker>
-        <Label  Content="Zadatak:" HorizontalAlignment="Left" Height="40" Margin="170,123,0,0" VerticalAlignment="Top" Width="227" FontFamily="Segoe UI" Foreground="#FFFBFB9F" FontSize="22" HorizontalContentAlignment="Center"/>
-        <Label  Content="Dan zadavanja:" HorizontalAlignment="Left" Height="42" Margin="170,217,0,0" VerticalAlignment="Top" Width="227" FontFamily="Segoe UI" Foreground="#FFFBFB9F" FontSize="22" HorizontalContentAlignment="Center"/>
-        <Label  Content="Dan predaje:" HorizontalAlignment="Left" Height="36" Margin="170,315,0,0" VerticalAlignment="Top" Width="227" FontFamily="Segoe UI" Foreground="#FFFBFB9F" FontSize="22" HorizontalContentAlignment="Center"/>
-        <Button Content="{Binding ButtonContent}"  Command="{Binding AddDomaciCommand}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="221" Margin="176,582,0,0" Height="63" FontFamily="Segoe UI" Foreground="#FFFBFB9F" Background="Transparent" BorderBrush="White" FontSize="36" FontWeight="Bold"/>
-        <Label  Content="{Binding ErrorZadatak}" HorizontalAlignment="Left" Height="29" Margin="55,194,0,0" VerticalAlignment="Top" Width="464" FontFamily="Segoe UI" Foreground="red" FontSize="14"/>
-        <Label  Content="{Binding ErrorDatumZadavanja}" HorizontalAlignment="Left" Height="29" Margin="55,286,0,0" VerticalAlignment="Top" Width="464" FontFamily="Segoe UI" Foreground="red" FontSize="14"/>
-        <Label  Content="{Binding ErrorDatumPredaje}" HorizontalAlignment="Left" Height="30" Margin="55,384,0,0" VerticalAlignment="Top" Width="464" FontFamily="Segoe UI" Foreground="red" FontSize="14"/>
-        <!--<Button Content="CHANGE" Visibility="{Binding Visible2}" Command="{Binding ChangeDomaciCommand}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="221" Margin="176,582,0,0" Height="63" FontFamily="Segoe UI" Foreground="#FFFBFB9F" Background="Transparent" BorderBrush="White" FontSize="36" FontWeight="Bold"/>-->
-        <Button  Content="Obrisi" Visibility="{Binding DeletionEnabled}" IsDefault="True" Command="{Binding DeleteDomaciCommand}" HorizontalAlignment="Left"  FontSize="24" VerticalAlignment="Top" Width="221" Margin="176,534,0,0" Height="48" RenderTransformOrigin="0.769,0.381"  FontFamily="Segoe UI" Background="Transparent" BorderBrush="White" Foreground="#FFFBFB9F" FontWeight="Bold"/>
+        <TextBox Template="{StaticResource TextBoxBaseControlTemplate}" HorizontalAlignment="Left" Height="39" TextWrapping="Wrap" Text="{Binding NoviDomaci.zadatak, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="464" Margin="55,129,0,0" Background="#FF2E2E2E" Foreground="#FFA7A9A8" FontSize="22"/>
+        <DatePicker SelectedDate="{Binding NoviDomaci.dan_zadavanja}" Margin="55,239,41,355"></DatePicker>
+        <DatePicker SelectedDate="{Binding NoviDomaci.dan_predaje}" Margin="55,340,41,256"></DatePicker>
+        <Label  Content="Zadatak:" HorizontalAlignment="Left" Height="40" Margin="164,89,0,0" VerticalAlignment="Top" Width="227" FontFamily="Segoe UI" Foreground="#FFFBFB9F" FontSize="22" HorizontalContentAlignment="Center"/>
+        <Label  Content="Dan zadavanja:" HorizontalAlignment="Left" Height="42" Margin="164,197,0,0" VerticalAlignment="Top" Width="227" FontFamily="Segoe UI" Foreground="#FFFBFB9F" FontSize="22" HorizontalContentAlignment="Center"/>
+        <Label  Content="Dan predaje:" HorizontalAlignment="Left" Height="36" Margin="164,299,0,0" VerticalAlignment="Top" Width="227" FontFamily="Segoe UI" Foreground="#FFFBFB9F" FontSize="22" HorizontalContentAlignment="Center"/>
+        <Button Content="{Binding ButtonContent}"  Command="{Binding AddDomaciCommand}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="221" Margin="170,568,0,0" Height="45" FontFamily="Segoe UI" Foreground="#FFFBFB9F" Background="Transparent" BorderBrush="White" FontSize="36" FontWeight="Bold"/>
+        <Label  Content="{Binding ErrorZadatak}" HorizontalAlignment="Left" Height="29" Margin="55,168,0,0" VerticalAlignment="Top" Width="464" FontFamily="Segoe UI" Foreground="red" FontSize="14"/>
+        <Label  Content="{Binding ErrorDatumZadavanja}" HorizontalAlignment="Left" Height="29" Margin="55,270,0,0" VerticalAlignment="Top" Width="464" FontFamily="Segoe UI" Foreground="red" FontSize="14"/>
+        <Label  Content="{Binding ErrorDatumPredaje}" HorizontalAlignment="Left" Height="30" Margin="55,368,0,0" VerticalAlignment="Top" Width="464" FontFamily="Segoe UI" Foreground="red" FontSize="14"/>
+
+        <DataGrid ItemsSource="{Binding Predmeti, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"  HorizontalAlignment="Left" Height="107" Margin="10,403,0,0" VerticalAlignment="Top" Width="540" SelectedItem="{Binding SelectedPredmet}" ColumnWidth="*" AutoGenerateColumns="False" IsReadOnly="True">
+            <DataGrid.Columns>
+
+
+                <DataGridTextColumn Header="Razred" TextBlock.TextAlignment="Center" Binding="{Binding razred}" IsReadOnly="True">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextWrapping" Value="Wrap" />
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                            <Setter Property="VerticalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+
+
+                <DataGridTextColumn Header="Naziv" TextBlock.TextAlignment="Center" Binding="{Binding naziv}" IsReadOnly="True">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextWrapping" Value="Wrap" />
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                            <Setter Property="VerticalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+
+                <DataGridTextColumn Header="Razred" TextBlock.TextAlignment="Center" Binding="{Binding broj_oblasti}" IsReadOnly="True">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextWrapping" Value="Wrap" />
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                            <Setter Property="VerticalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+
+
+                <!--<DataGridTemplateColumn Header="Dodaj oblast">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}, Path=DataContext.AddOblastCommand}" CommandParameter="{Binding}">Nova oblast</Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+
+                <DataGridTemplateColumn Header="Izmeni oblast">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}, Path=DataContext.ChangeOblastCommand}" CommandParameter="{Binding}">Izmeni oblast</Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>-->
+
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <Button  Content="Obrisi" Visibility="{Binding DeletionEnabled}" IsDefault="True" Command="{Binding DeleteDomaciCommand}" HorizontalAlignment="Left"  FontSize="24" VerticalAlignment="Top" Width="221" Margin="170,515,0,0" Height="48" RenderTransformOrigin="0.769,0.381"  FontFamily="Segoe UI" Background="Transparent" BorderBrush="White" Foreground="#FFFBFB9F" FontWeight="Bold"/>
 
     </Grid>
 </Window>
