--- a/OsnovnaSkola/OsnovnaSkolaUI/Views/AddKontrolniWindow.xaml
+++ b/OsnovnaSkola/OsnovnaSkolaUI/Views/AddKontrolniWindow.xaml
@@ -39,8 +39,62 @@
         <Button Content="{Binding ButtonContent}"  Command="{Binding AddKontrolniCommand}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="221" Margin="176,582,0,0" Height="63" FontFamily="Segoe UI" Foreground="#FFFBFB9F" Background="Transparent" BorderBrush="White" FontSize="36" FontWeight="Bold"/>
         <Label  Content="{Binding ErrorZadatak}" HorizontalAlignment="Left" Height="29" Margin="55,194,0,0" VerticalAlignment="Top" Width="464" FontFamily="Segoe UI" Foreground="red" FontSize="14"/>
         <Label  Content="{Binding ErrorDatumZadavanja}" HorizontalAlignment="Left" Height="29" Margin="55,286,0,0" VerticalAlignment="Top" Width="464" FontFamily="Segoe UI" Foreground="red" FontSize="14"/>
-        <!--<Label  Content="{Binding ErrorDatumPredaje}" HorizontalAlignment="Left" Height="30" Margin="55,384,0,0" VerticalAlignment="Top" Width="464" FontFamily="Segoe UI" Foreground="red" FontSize="14"/>-->
-        <!--<Button Content="CHANGE" Visibility="{Binding Visible2}" Command="{Binding ChangeDomaciCommand}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="221" Margin="176,582,0,0" Height="63" FontFamily="Segoe UI" Foreground="#FFFBFB9F" Background="Transparent" BorderBrush="White" FontSize="36" FontWeight="Bold"/>-->
+
+        <DataGrid ItemsSource="{Binding Predmeti, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"  HorizontalAlignment="Left" Height="194" Margin="7,321,0,0" VerticalAlignment="Top" Width="540" SelectedItem="{Binding SelectedPredmet}" ColumnWidth="*" AutoGenerateColumns="False" IsReadOnly="True">
+            <DataGrid.Columns>
+                
+
+                <DataGridTextColumn Header="Razred" TextBlock.TextAlignment="Center" Binding="{Binding razred}" IsReadOnly="True">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextWrapping" Value="Wrap" />
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                            <Setter Property="VerticalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+
+
+                <DataGridTextColumn Header="Naziv" TextBlock.TextAlignment="Center" Binding="{Binding naziv}" IsReadOnly="True">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextWrapping" Value="Wrap" />
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                            <Setter Property="VerticalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+
+                <DataGridTextColumn Header="Razred" TextBlock.TextAlignment="Center" Binding="{Binding broj_oblasti}" IsReadOnly="True">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextWrapping" Value="Wrap" />
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                            <Setter Property="VerticalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+
+
+                <!--<DataGridTemplateColumn Header="Dodaj oblast">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}, Path=DataContext.AddOblastCommand}" CommandParameter="{Binding}">Nova oblast</Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+
+                <DataGridTemplateColumn Header="Izmeni oblast">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}, Path=DataContext.ChangeOblastCommand}" CommandParameter="{Binding}">Izmeni oblast</Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>-->
+
+            </DataGrid.Columns>
+        </DataGrid>
+
         <Button  Content="Obrisi" Visibility="{Binding DeletionEnabled}" IsDefault="True" Command="{Binding DeleteKontrolniCommand}" HorizontalAlignment="Left"  FontSize="24" VerticalAlignment="Top" Width="221" Margin="176,534,0,0" Height="48" RenderTransformOrigin="0.769,0.381"  FontFamily="Segoe UI" Background="Transparent" BorderBrush="White" Foreground="#FFFBFB9F" FontWeight="Bold"/>
 
     </Grid>
